--- a/aplicacao/css/styles.css
+++ b/aplicacao/css/styles.css
@@ -6,6 +6,14 @@ body {
   color: #006837;
   font-weight: bold;
 }
+.form-control:focus {
+  border-color: #006837;
+  outline: 0;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(0,104,055,.6);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(0,104,055,.6);
+}
+
+
 #contact-msg{
   resize: none;
 }
